<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/edit_text"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_dark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_leftBracket"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/buttonLeftBracket"
                android:fontFamily="sans-serif"
                android:onClick="OperationFunction"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_rightBracket"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonRightBracket"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_percentage"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/buttonPercentage"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonMultiply"
                android:layout_weight="2"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_one"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:text="@string/buttonOne"
                android:fontFamily="sans-serif"
                android:onClick="OperationFunction"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_two"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonTwo"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_three"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/buttonThree"
                android:fontFamily="sans-serif"
                android:onClick="OperationFunction"
                android:textSize="16sp"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_divide"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonDivide"
                android:layout_weight="2"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_four"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonFour"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_five"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonFive"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_six"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonSix"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonSub"
                android:layout_weight="2"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_seven"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonSeven"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_eight"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonEight"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_nine"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonNine"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonAdd"
                android:layout_weight="2"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:text="@string/buttonClear"
                android:onClick="OperationFunction"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_zero"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonZero"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonDot"
                android:layout_weight="2"></Button>
            <Button
                android:id="@+id/button_equal"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:onClick="OperationFunction"
                android:text="@string/buttonEqual"
                android:layout_weight="2"></Button>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>